k8s-kurulum/manifests/namespaces/redisinsight/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redisinsight
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
