k8s-kurulum/manifests/namespaces/redisinsight/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redisinsight-ingress
  namespace: redisinsight
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: test-prod-redisinsight-basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  ingressClassName: nginx
  rules:
    - host: redisinsight.tislemler.tislemler.com.tr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-prod-redisinsight
                port:
                  number: 80
